--- a/TickTackToe.css
+++ b/TickTackToe.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #parent-container {
     display: grid;
     margin-top: 100px;
@@ -9,10 +13,38 @@
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+#start-menu {
+    
+}
+
+#start-menu form {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    row-gap: 10px;
+}
+
+#start-game {
+    align-self: center;
+    grid-column: 1 / 3;
+    justify-self: center;
+    height: 40px;
+    width: 120px;
+    font-size: 1rem;
+}
+
 #board-container {
     height: 500px;
     width: 500px;
-    display: grid;
+    display: none;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+}
+
+#right-panel {
+    display: none;
+    padding: 30px;
+}
+
+#left-panel {
+    visibility: hidden;
 }
