--- a/TickTackToe.css
+++ b/TickTackToe.css
@@ -14,25 +14,33 @@
 }
 
 #start-menu {
-    
+    grid-column: 2 / 3;
 }
 
 #start-menu form {
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     row-gap: 10px;
+    font-size: 1.5rem;
+    justify-items: center;
+}
+
+input {
+    font-size: 1.5rem;
+    width: 60%;
 }
 
 #start-game {
     align-self: center;
-    grid-column: 1 / 3;
     justify-self: center;
-    height: 40px;
-    width: 120px;
-    font-size: 1rem;
+    height: 50px;
+    width: 150px;
+    font-size: 1.2rem;
 }
 
 #board-container {
+    grid-column: 2 / 3;
     height: 500px;
     width: 500px;
     display: none;
@@ -40,11 +48,37 @@
     grid-template-rows: 1fr 1fr 1fr;
 }
 
+.board-cell {
+    font-size: 8rem;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #right-panel {
+    grid-column: 3 / 4;
+    font-size: 2rem;
     display: none;
     padding: 30px;
 }
 
-#left-panel {
-    visibility: hidden;
+#win-dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(10px);
+}
+
+#win-dialog {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+#new-round , #new-game {
+    font-size: 1.2rem;
+    width: 150px;
+    height: 50px;
+}
+
+#win-announcement {
+    font-size: 1.6rem;
 }
